GET /api/portfolios

--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -120,9 +120,43 @@ operation::create-post[snippets='request-fields,curl-request,http-request,reques
 
 operation::get-post[snippets='request-fields,curl-request,http-response,links']
 
-[[resources-events-update]]
+[[resources-posts-update]]
 === 포스트 수정
 
 `PUT` 요청을 사용해서 기존 포스트를 수정할 수 있다.
 
-operation::update-event[snippets='request-fields,curl-request,http-response,links']
+operation::update-post[snippets='request-fields,curl-request,http-response,links']
+
+
+[[resources-portfolios]]
+== 포트폴리오
+
+포트폴리오 리소스는 포트폴리오를 만들거나 조회할 때 사용한다.
+
+[[resources-portfolios-list]]
+=== 포스트 목록 조회
+
+`GET` 요청을 사용하여 서비스의 모든 포트폴리오를 조회할 수 있다.
+
+operation::get-portfolios[snippets='response-fields,curl-request,http-response,links']
+
+[[resources-portfolios-create]]
+=== 포트폴리오 생성
+
+`POST` 요청을 사용해서 새 포트폴리오를 만들 수 있다.
+
+operation::create-portfolio[snippets='request-fields,curl-request,http-request,request-headers,http-response,response-headers,response-fields,links']
+
+[[resources-portfolios-get]]
+=== 포트폴리오 조회
+
+`Get` 요청을 사용해서 기존 포트폴리오 하나를 조회할 수 있다.
+
+operation::get-portfolio[snippets='request-fields,curl-request,http-response,links']
+
+[[resources-portfolios-update]]
+=== 포트폴리오 수정
+
+`PUT` 요청을 사용해서 기존 포트폴리오를 수정할 수 있다.
+
+operation::update-portfolio[snippets='request-fields,curl-request,http-response,links']
