--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -134,11 +134,11 @@ operation::update-post[snippets='request-fields,curl-request,http-response,links
 포트폴리오 리소스는 포트폴리오를 만들거나 조회할 때 사용한다.
 
 [[resources-portfolios-list]]
-=== 포스트 목록 조회
+=== 포트폴리오 목록 조회
 
 `GET` 요청을 사용하여 서비스의 모든 포트폴리오를 조회할 수 있다.
 
-operation::get-portfolios[snippets='response-fields,curl-request,http-response,links']
+operation::get-portfolios[snippets='request-parameters,curl-request,http-response,response-fields,links']
 
 [[resources-portfolios-create]]
 === 포트폴리오 생성
